--- a/S1FileSync/App.xaml
+++ b/S1FileSync/App.xaml
@@ -6,10 +6,9 @@
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="pack://application:,,,/Views/Theme/LightTheme.xaml"/>
-                <ResourceDictionary Source="pack://application:,,,/Views/Theme/DarkTheme.xaml"/>
-
-                <ResourceDictionary Source="/Views/Styles/ButtonStyles.xaml"/>
+                <ResourceDictionary Source="/S1FileSync;component/Views/Styles/CommonStyle.xaml"/>
+                <ResourceDictionary Source="/S1FileSync;component/Views/Styles/ButtonStyles.xaml"/>
+                <ResourceDictionary Source="/S1FileSync;component/Views/Theme/DarkTheme.xaml"/>
             </ResourceDictionary.MergedDictionaries>
             
             <converters:InverseBoolConverter x:Key="InverseBoolConverter"/>
