--- a/S1FileSync/Views/Theme/LightTheme.xaml
+++ b/S1FileSync/Views/Theme/LightTheme.xaml
@@ -6,7 +6,11 @@
     <Color x:Key="PrimaryColorHoverValue">#4338ca</Color>
     <SolidColorBrush x:Key="PrimaryColorHover" Color="{StaticResource PrimaryColorHoverValue}"/>
 
-    <SolidColorBrush x:Key="MainBackground" Color="#ffffff"/>
+    <Color x:Key="SecondaryColorValue">#a8abb3</Color>
+    <SolidColorBrush x:Key="SecondaryColor" Color="{StaticResource SecondaryColorValue}"/>
+
+    <Color x:Key="MainColorValue">#ffffff</Color>
+    <SolidColorBrush x:Key="MainBackground" Color="{StaticResource MainColorValue}"/>
     <SolidColorBrush x:Key="SidebarBackground" Color="#f3f4f6"/>
 
     <Color x:Key="PrimaryTextColorValue">#000000</Color>
@@ -18,6 +22,7 @@
     <SolidColorBrush x:Key="HoverColor" Color="#e5e7eb"/>
     <SolidColorBrush x:Key="PressedColor" Color="#d1d5db"/>
     <SolidColorBrush x:Key="BorderColor" Color="#e5e7eb"/>
+    <SolidColorBrush x:Key="PrimaryButtonTextColor" Color="{StaticResource MainColorValue}"/>
 
     <!-- FileSyncProgress -->
     <SolidColorBrush x:Key="CardBackground" Color="#ffffff"/>
@@ -25,5 +30,9 @@
     <SolidColorBrush x:Key="IconBackground" Color="#f3f4f6"/>
     <SolidColorBrush x:Key="IconForeground" Color="#6b7280"/>
     <SolidColorBrush x:Key="InputBackground" Color="#ffffff"/>
+    <SolidColorBrush x:Key="InputTextColor" Color="#000000"/>
     <SolidColorBrush x:Key="ProgressBarBackground" Color="#e5e7eb"/>
+    <!-- FileIcon -->
+    <SolidColorBrush x:Key="GreenColor" Color="#25C254"/>
+    <SolidColorBrush x:Key="RedColor" Color="#E83E2E"/>
 </ResourceDictionary>
