feat. 설치시 시작 프로그램에 바로가기 생성, 레지스트리 관리, 시작시 자동 실행 추가(테스트 중)

--- a/SetupProject/Components/Registry.wxs
+++ b/SetupProject/Components/Registry.wxs
@@ -4,7 +4,7 @@
         <DirectoryRef Id="INSTALLFOLDER">
             <Component Id="StartupRegistryEntry" Guid="*">
                 <RegistryKey Root="HKCU"
-                             Key="Software\S1FileSync">
+                             Key="Software\SECUiDEA\S1FileSync">
                     <RegistryValue Name="InstallPath"
                                    Value="[INSTALLFOLDER]"
                                    Type="string"/>
