feat&update. 동기화 주기 문제 해결 및 설치 완료 (ver 1.0)

--- a/S1FileSync/Views/SyncMonitorView.xaml
+++ b/S1FileSync/Views/SyncMonitorView.xaml
@@ -42,13 +42,13 @@
                             Background="{DynamicResource HoverColor}"
                             CornerRadius="16"
                             Padding="12,6">
-                        <TextBlock Text="{Binding ConnectionStatus}"
+                        <TextBlock Text="{Binding GetConnected}"
                                    FontSize="14">
                             <TextBlock.Style>
                                 <Style TargetType="TextBlock">
                                     <Setter Property="Foreground" Value="{DynamicResource SecondaryTextColor}"/>
                                     <Style.Triggers>
-                                        <DataTrigger Binding="{Binding IsConnected}" Value="True">
+                                        <DataTrigger Binding="{Binding GetConnectedStatus}" Value="True">
                                             <Setter Property="Foreground" Value="{DynamicResource GreenColor}"/>
                                         </DataTrigger>
                                     </Style.Triggers>
