feat. IPC 간소화, WPF 프로세스에서 리소스 제어 추가, TODO. IPC 재연결 로직 수정, 리소스 제어 테스트

--- a/S1FileSync/Views/MainWindow.xaml
+++ b/S1FileSync/Views/MainWindow.xaml
@@ -16,7 +16,8 @@
         MaxWidth="{x:Static SystemParameters.MaximizedPrimaryScreenWidth}"
         d:DataContext="{d:DesignInstance Type=model:MainViewModel}"
         Icon="/Assets/app.ico"
-        Opacity="1">
+        Opacity="0"
+        d:Opacity="1">
     <Window.Resources>
         <ResourceDictionary>
             <Storyboard x:Key="SidebarExpandAnimation">
